// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CommunityFilteredTagsComponent should not show filter title when filtering by multiple posts 1`] = `
<pf-community-filtered-tags
  communityPosts$={[Function Store]}
  filterOptionsSubscription={[Function Subscriber]}
  filterStore={[Function Store]}
  filterTitle={[Function String]}
  filterTitle$={[Function Store]}
  filterTitleSubscription={[Function Subscriber]}
  filteredByPost$={[Function Store]}
  filteredCategories={[Function Array]}
  filteredCompanySizes={[Function Array]}
  filteredIndustries={[Function Array]}
  filteredTags={[Function Array]}
  filteredTopics={[Function Array]}
  filters$={[Function Observable]}
  isFilteredByPostId={[Function Boolean]}
  isFilteredByReplyId="false"
  router={[Function Object]}
  store={[Function Store]}
>
  <div
    class="mb-3"
    id="tag-container"
  >
    
    
    
    
    
    
    
    
    <div
      class="mt-1"
    >
      
      
      <button
        class="btn btn-secondary submit-button-container"
        type="button"
      >
        <fa-icon />
        <span
          class="pl-2"
        >
          View All Posts
        </span>
      </button>
    </div>
    
  </div>
</pf-community-filtered-tags>
`;

exports[`CommunityFilteredTagsComponent should show filter title when filtering by single post 1`] = `
<pf-community-filtered-tags
  communityPosts$={[Function Store]}
  filterOptionsSubscription={[Function Subscriber]}
  filterStore={[Function Store]}
  filterTitle={[Function String]}
  filterTitle$={[Function Store]}
  filterTitleSubscription={[Function Subscriber]}
  filteredByPost$={[Function Store]}
  filteredCategories={[Function Array]}
  filteredCompanySizes={[Function Array]}
  filteredIndustries={[Function Array]}
  filteredTags={[Function Array]}
  filteredTopics={[Function Array]}
  filters$={[Function Observable]}
  isFilteredByPostId={[Function Boolean]}
  isFilteredByReplyId="false"
  router={[Function Object]}
  store={[Function Store]}
>
  <div
    class="mb-3"
    id="tag-container"
  >
    
    
    
    
    
    
    
    
    <div
      class="mt-1"
    >
      
      <button
        class="btn m-1 tag py-2 px-3 shadow-none btn-selected"
        type="button"
      >
        <span>
          Test Post Filter
        </span>
        <fa-icon
          icon="times-circle"
        />
      </button>
      
    </div>
    
  </div>
</pf-community-filtered-tags>
`;

exports[`CommunityFilteredTagsComponent should show trending tags 1`] = `
<pf-community-filtered-tags
  communityPosts$={[Function Store]}
  filterOptionsSubscription={[Function Subscriber]}
  filterStore={[Function Store]}
  filterTitle$={[Function Store]}
  filterTitleSubscription={[Function Subscriber]}
  filteredByPost$={[Function Store]}
  filteredCategories={[Function Array]}
  filteredCompanySizes={[Function Array]}
  filteredIndustries={[Function Array]}
  filteredTags={[Function Array]}
  filteredTopics={[Function Array]}
  filters$={[Function Store]}
  isFilteredByPostId="false"
  isFilteredByReplyId="false"
  router={[Function Object]}
  store={[Function Store]}
>
  <div
    class="mb-3"
    id="tag-container"
  >
    
  </div>
</pf-community-filtered-tags>
`;
